Fixed layout issue on iPhone.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -55,7 +55,7 @@ ol#favourites {
   font-size: 110%;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="number"] {
   width: 200px;
 }
 
